--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -37,11 +37,10 @@
   },
   "tsserver.npm": "/usr/local/bin/npm",
   "javascript.suggestionActions.enabled": false,
-  "javascript.showUnused": false,
-  "javascript.format.enabled": false,
+  "javascript.showUnused": true,
+  "javascript.format.enabled": true,
   "typescript.format.enabled": false,
   "python.jediEnabled": false,
-  "prettier.eslintIntegration": true,
   "solargraph.diagnostics": true,
   "solargraph.autoformat": true,
   "solargraph.completion": true,
